# sirl

./: .gitignore  README.md
assignment1/: README.md  cheetah_modified.xml  main.py  observe.py  pyproject.toml  train.py
assignment2/: README.md  analyze.py  move_basics.py  perform.py  pyproject.toml  read_basics.py  record.py  trajectory.csv  trajectory_ready.csv  trajectory_resampled.csv  twin.py
assignment2/data/: trajectory_normalized.csv
assignment2/preprocessing/: convert.py  normalize.py  resample.py  visualize.py
assignment2/ur5e/: ur5e.xml
assignment3/: README.md  abd_notebook_1.ipynb  abd_notebook_2.ipynb  abd_notebook_3.ipynb  abd_notebook_4.ipynb  assignment.ipynb  exercise2.py  exercise3.py  markdown.md  notebooks.ipynb  spatial_algebra.py  threelinks.xml
assignment3_mona/: exercise1.py  exercise2.py  exercise3.py  math_utils.py  probe.py  pyproject.toml  spatial_algebra.py  visualize_link.py
assignment4/: Differentiate _UR_ kinematics.ipynb  Digital_twin_of_UR5_in_Mujoco_3.ipynb  README.md  SiRL_Assignment 4_Automatic_Differentiation.ipynb.ipynb  chat_watch_scene.py  exercise1.py  exercise3.py  main.py  pyproject.toml  tiny_test_Robot.py
assignment4/.ipynb_checkpoints/: helper-checkpoint.ipynb  watch_scene-checkpoint.py
assignment4_marek/: exercise2.py
assignment5/: markdown.md  optctrl_assignment.ipynb
assignment5/articulated_dynamics/: articulated_system.py  dynamics.py  integrator.py  kinematics.py  robots.py  spatial_algebra.py  test_mujoco.ipynb  visualizer.py
