[project]
name = "assignment4-marek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.8",
    "jax>=0.10.0",
    "mujoco>=3.8.1",
    "mujoco-mjx>=3.8.1",
    "numpy>=2.4.5",
    "pynput>=1.8.2",
    "scikit-learn>=1.8.0",
    "ur-rtde>=1.6.3",
    "warp-lang>=1.13.0",
]
